# clipper-py

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  tests.py
.github/workflows/: publish.yml
clipper/: clipper.cpp  clipper.hpp
clipper_py/: __init__.py  clipper-py.cpp  clipper-py.h  clipper.cpp  int-point.cpp  path.cpp  poly-tree.cpp
